fix spacing issue on projects

--- a/Style.css
+++ b/Style.css
@@ -154,6 +154,8 @@
             padding-top: 2vh;
             word-wrap: break-word;
             overflow: hidden;
+            margin-left: 5%;
+            margin-left: 5%;
             border-radius: 1.5vmin;
             margin-bottom: 15vh;
         }
